--- a/PatientProfile/index.html
+++ b/PatientProfile/index.html
@@ -12,7 +12,7 @@
     <div class="top-bar">
     <a href="../Home">Home</a>
     <a href="../AboutUs" >About</a>
-    <a href="index.html" class="active-bar">Patient Portal | &#10753;LIFE</a>
+    <a href="index.html" class="active-bar">Patient Profile | &#10753;LIFE</a>
     </div>
     <div class="content" style="margin:0;">
         <div class="section" >
@@ -24,7 +24,7 @@
                             </div>
                             <div class="profile-box-cell" style="color: aliceblue;">
                                 <ul type="disc">
-                                        <li style="padding: 0.5em;">Name : Dr. Abhishek Sengar</li>
+                                        <li style="padding: 0.5em;">Name : Abhishek Sengar</li>
                                         <li style="padding: 0.5em;">Phone Number :   +91 1234-567-891</li>
                                         <li style="padding: 0.5em;">Age : 20</li>
                                         <li style="padding: 0.5em;">Email : Abhishek123@gmail.com</li>
